# physical_ai_tools

./: .gitmodules
.github/workflows/: ros-ci.yml  ros-lint.yml
docker/: Dockerfile.server  docker-compose.yml
physical_ai_interfaces/: CHANGELOG.rst
physical_ai_interfaces/msg/: TaskInfo.msg
physical_ai_manager/: CHANGELOG.rst  package-lock.json  package.json
physical_ai_manager/src/components/: InfoPanel.js  RobotTypeSelector.js
physical_ai_manager/src/features/editDataset/components/: DatasetHuggingfaceSection.js
physical_ai_manager/src/features/tasks/: taskSlice.js
physical_ai_manager/src/features/ui/: uiSlice.js
physical_ai_manager/src/hooks/: useRosServiceCaller.js  useRosTopicSubscription.js
physical_ai_server/: CHANGELOG.rst  package.xml  setup.py
physical_ai_server/launch/: physical_ai_server_bringup.launch.py
physical_ai_server/physical_ai_server/: physical_ai_server.py
physical_ai_server/physical_ai_server/communication/: communicator.py
physical_ai_server/physical_ai_server/data_processing/: data_editor.py  data_manager.py  dataset_card_template.md  lerobot_dataset_wrapper.py  model_card_template.md
physical_ai_server/physical_ai_server/utils/: parameter_utils.py
physical_ai_tools/: CHANGELOG.rst  package.xml
rosbag_recorder/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbag_recorder/include/rosbag_recorder/: service_bag_recorder.hpp
rosbag_recorder/src/: service_bag_recorder.cpp
rosbag_recorder/srv/: SendCommand.srv
