<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>physical_ai_server</name>
  <version>0.7.2</version>
  <description>
    ROS 2 package for Open Platform AI Kit integration
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="kdy@robotis.com">Dongyun Kim</author>
  <author email="kimsw@robotis.com">Seongwoo Kim</author>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>physical_ai_interfaces</depend>
  <depend>message_filters</depend>
  <depend>cv_bridge</depend>
  <depend>trajectory_msgs</depend>
  <depend>rosbag_recorder</depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>rosbridge_suite</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
